refactors prediction_regression_runs

--- a/workspace/sfn_figures_monkey.ipynb
+++ b/workspace/sfn_figures_monkey.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T20:29:29.433527Z",
-     "start_time": "2024-10-22T20:29:29.426223Z"
+     "end_time": "2024-10-30T18:11:04.593499Z",
+     "start_time": "2024-10-30T18:11:04.590099Z"
     }
    },
    "outputs": [],
@@ -17,7 +17,8 @@
     "import adaptive_latents.input_sources.datasets as datasets\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
-    "import prediction_regression_pipeline as prp\n",
+    "from adaptive_latents import proSVD, Bubblewrap, VanillaOnlineRegressor\n",
+    "# import prediction_regression_pipeline as prp\n",
     "from adaptive_latents.plotting_functions import PredictionVideo\n",
     "from adaptive_latents import (\n",
     "    AnimationManager\n",
@@ -35,8 +36,8 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T20:29:30.030104Z",
-     "start_time": "2024-10-22T20:29:30.027573Z"
+     "end_time": "2024-10-30T18:11:05.855551Z",
+     "start_time": "2024-10-30T18:11:05.847573Z"
     }
    },
    "outputs": [],
@@ -62,8 +63,8 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T20:29:31.635858Z",
-     "start_time": "2024-10-22T20:29:31.219222Z"
+     "end_time": "2024-10-30T18:11:07.377039Z",
+     "start_time": "2024-10-30T18:11:07.061199Z"
     }
    },
    "outputs": [],
@@ -72,8 +73,69 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T18:11:47.250257Z",
+     "start_time": "2024-10-30T18:11:08.912372Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from prediction_regression_run import PredictionRegressionRun\n",
+    "d = datasets.Odoherty21Dataset()\n",
+    "\n",
+    "run1 = PredictionRegressionRun(\n",
+    "    neural_data=d.neural_data,\n",
+    "    behavioral_data=d.behavioral_data,\n",
+    "    dim_red_branches={\n",
+    "        'pro6': [proSVD(k=6, log_level=1), Bubblewrap(log_level=1), VanillaOnlineRegressor],\n",
+    "    },\n",
+    "    targets={\n",
+    "        'beh': d.behavioral_data,\n",
+    "    },\n",
+    "    neural_smoothing_tau=.12,\n",
+    "    stream_scaling_factors=None,\n",
+    "    exit_time=50,\n",
+    ")\n",
+    "run2 = PredictionRegressionRun(\n",
+    "    neural_data=d.neural_data,\n",
+    "    behavioral_data=d.behavioral_data,\n",
+    "    dim_red_branches={\n",
+    "        'pro6': [proSVD(k=6, log_level=1), Bubblewrap(log_level=1), VanillaOnlineRegressor],\n",
+    "    },\n",
+    "    targets={\n",
+    "        'beh': d.behavioral_data,\n",
+    "    },\n",
+    "    neural_smoothing_tau=.02,\n",
+    "    stream_scaling_factors=None,\n",
+    "    exit_time=50,\n",
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T18:12:53.607366Z",
+     "start_time": "2024-10-30T18:12:53.322277Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import prr\n",
+    "prr = reload(prr)\n",
+    "prr.ParallelRun.compare_metrics_across_runs([1,2], [run1,run2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6",
    "metadata": {},
    "source": [
     "# Intro Video"
@@ -82,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T20:29:33.785796Z",
@@ -124,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "14",
    "metadata": {},
    "source": [
     "# Odoherty21 Portion"
@@ -196,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Intro video"
@@ -204,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "16",
    "metadata": {},
    "source": [
     "## Trajectory with 2d histogram background"
@@ -213,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T22:23:04.376908Z",
@@ -222,14 +284,14 @@
    },
    "outputs": [],
    "source": [
-    "odoherty_run = prp.PipelineRun(**prp.PipelineRun.default_parameter_values['odoherty21'])\n",
+    "odoherty_run = prp.PredictionRegressionRun(**prp.PredictionRegressionRun.default_parameter_values['odoherty21'])\n",
     "run = odoherty_run"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:10.647632Z",
@@ -256,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "19",
    "metadata": {},
    "source": [
     "## Data, Latent, Prediction graph"
@@ -265,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:43:30.921132Z",
@@ -296,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "21",
    "metadata": {},
    "source": [
     "## Stream table"
@@ -305,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:39:48.823513Z",
@@ -316,8 +378,8 @@
    "source": [
     "run_all = odoherty_run\n",
     "if True:\n",
-    "    run_no_neural = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
-    "    run_no_beh = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n",
+    "    run_no_neural = prp.PredictionRegressionRun(**(prp.PredictionRegressionRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
+    "    run_no_beh = prp.PredictionRegressionRun(**(prp.PredictionRegressionRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n",
     "    def make_row(run):\n",
     "        return ({\n",
     "            'beh_x': run.beh_nrmses[0],\n",
@@ -337,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "23",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:40:12.169790Z",
@@ -359,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:27:36.912178Z",
@@ -447,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "25",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:40:00.147935Z",
@@ -561,7 +623,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T18:19:08.547680Z",
@@ -575,7 +637,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "27",
    "metadata": {},
    "source": [
     "# Zong22 Portion"
@@ -584,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "28",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:38.534593Z",
@@ -593,12 +655,12 @@
    },
    "outputs": [],
    "source": [
-    "zong_run = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n"
+    "zong_run = prp.PredictionRegressionRun(**(prp.PredictionRegressionRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "29",
    "metadata": {},
    "source": [
     "## Dimensionality reduction comparison"
@@ -607,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:18.245911Z",
@@ -635,7 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T19:02:30.461620Z",
@@ -718,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "33",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -727,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "34",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T20:48:20.978307Z",
@@ -736,13 +798,13 @@
    },
    "outputs": [],
    "source": [
-    "fish_run = prp.PipelineRun(**prp.PipelineRun.default_parameter_values['naumann24u'])"
+    "fish_run = prp.PredictionRegressionRun(**prp.PredictionRegressionRun.default_parameter_values['naumann24u'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
@@ -817,7 +879,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "36",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
