--- a/workspace/sfn_figures_fish.ipynb
+++ b/workspace/sfn_figures_fish.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T21:56:04.781990Z",
-     "start_time": "2024-10-23T21:56:02.931734Z"
+     "end_time": "2024-11-04T17:13:05.212048Z",
+     "start_time": "2024-11-04T17:13:01.180968Z"
     }
    },
    "outputs": [],
@@ -17,7 +17,7 @@
     "import adaptive_latents.input_sources.datasets as datasets\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
-    "import prediction_regression_pipeline as prp\n",
+    "import prediction_regression_run as prr\n",
     "from adaptive_latents.plotting_functions import PredictionVideo\n",
     "from adaptive_latents import (\n",
     "    AnimationManager\n",
@@ -33,23 +33,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-23T21:50:11.359577Z",
-     "start_time": "2024-10-23T21:50:11.353416Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "source": [
     "# Intro Video"
@@ -58,11 +43,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T14:27:39.881999Z",
-     "start_time": "2024-10-22T14:27:39.877216Z"
+     "end_time": "2024-11-04T17:13:13.252162Z",
+     "start_time": "2024-11-04T17:13:13.246865Z"
     }
    },
    "outputs": [],
@@ -104,24 +89,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-22T14:27:45.181567Z",
-     "start_time": "2024-10-22T14:27:39.882399Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "d = datasets.Naumann24uDataset(datasets.Naumann24uDataset.sub_datasets[1], beh_type='whole tail')\n",
-    "intro_plot_fish(d, start_time=315, duration=19, fps=50, tail_length=1.1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "3",
    "metadata": {},
    "source": [
     "# Stim part"
@@ -130,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:59:21.024577Z",
@@ -139,12 +108,12 @@
    },
    "outputs": [],
    "source": [
-    "fish_run = prp.PipelineRun(**(prp.PipelineRun.default_parameter_values['naumann24u'] | dict(exit_time=-1, beh_type='bout')))"
+    "fish_run = prr.PipelineRun(**(prr.PipelineRun.default_parameter_values['naumann24u'] | dict(exit_time=-1, beh_type='bout')))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "5",
    "metadata": {},
    "source": [
     "## Dimensionality reduction comparison"
@@ -153,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T13:42:08.394626Z",
@@ -182,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T17:05:25.068468Z",
@@ -206,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T17:08:26.433881Z",
@@ -281,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:54:32.254826Z",
@@ -296,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "10",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T17:10:32.526Z",
@@ -313,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "11",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T16:54:49.063949Z",
@@ -327,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -336,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "13",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T22:02:52.079094Z",
@@ -384,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "14",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T18:08:58.943714Z",
@@ -399,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "15",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
