--- a/workspace/sfn_figures_monkey.ipynb
+++ b/workspace/sfn_figures_monkey.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T18:11:04.593499Z",
-     "start_time": "2024-10-30T18:11:04.590099Z"
+     "end_time": "2024-11-05T16:30:13.033146Z",
+     "start_time": "2024-11-05T16:30:11.263344Z"
     }
    },
    "outputs": [],
@@ -16,10 +16,10 @@
     "\n",
     "import adaptive_latents.input_sources.datasets as datasets\n",
     "import adaptive_latents.plotting_functions as pf\n",
+    "from adaptive_latents.timed_data_source import ArrayWithTime\n",
     "import matplotlib.pyplot as plt\n",
-    "from adaptive_latents import proSVD, Bubblewrap, VanillaOnlineRegressor\n",
-    "# import prediction_regression_pipeline as prp\n",
-    "from adaptive_latents.plotting_functions import PredictionVideo\n",
+    "import prediction_regression_run as prr\n",
+    "from adaptive_latents.plotting_functions import PredictionVideo, plot_history_with_tail\n",
     "from adaptive_latents import (\n",
     "    AnimationManager\n",
     ")\n",
@@ -27,28 +27,14 @@
     "import pandas as pd\n",
     "from importlib import reload\n",
     "from IPython import display\n",
+    "\n",
+    "from prediction_regression_run import PredictionRegressionRun\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-30T18:11:05.855551Z",
-     "start_time": "2024-10-30T18:11:05.847573Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from adaptive_latents.plotting_functions import plot_history_with_tail\n",
-    "adaptive_latents.plotting_functions = reload(adaptive_latents.plotting_functions)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "source": [
     "* [jPCA figure](https://www.dropbox.com/scl/fo/duf5zbwcibsux467c6oc9/AIN-ZiFsy2Huyh8h7VMdL7g?dl=0&e=1&preview=Basic+jPCA+plot.pdf&rlkey=3o5axmq5hirel4cij7g64jc0r)\n",
@@ -60,11 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T18:11:07.377039Z",
-     "start_time": "2024-10-30T18:11:07.061199Z"
+     "end_time": "2024-11-05T16:38:46.535476Z",
+     "start_time": "2024-11-05T16:38:46.269108Z"
     }
    },
    "outputs": [],
@@ -75,67 +61,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T18:11:47.250257Z",
-     "start_time": "2024-10-30T18:11:08.912372Z"
+     "end_time": "2024-11-05T16:42:45.868057Z",
+     "start_time": "2024-11-05T16:42:13.045717Z"
     }
    },
    "outputs": [],
    "source": [
-    "from prediction_regression_run import PredictionRegressionRun\n",
-    "d = datasets.Odoherty21Dataset()\n",
-    "\n",
-    "run1 = PredictionRegressionRun(\n",
-    "    neural_data=d.neural_data,\n",
-    "    behavioral_data=d.behavioral_data,\n",
-    "    dim_red_branches={\n",
-    "        'pro6': [proSVD(k=6, log_level=1), Bubblewrap(log_level=1), VanillaOnlineRegressor],\n",
-    "    },\n",
-    "    targets={\n",
-    "        'beh': d.behavioral_data,\n",
-    "    },\n",
-    "    neural_smoothing_tau=.12,\n",
-    "    stream_scaling_factors=None,\n",
-    "    exit_time=50,\n",
-    ")\n",
-    "run2 = PredictionRegressionRun(\n",
-    "    neural_data=d.neural_data,\n",
-    "    behavioral_data=d.behavioral_data,\n",
-    "    dim_red_branches={\n",
-    "        'pro6': [proSVD(k=6, log_level=1), Bubblewrap(log_level=1), VanillaOnlineRegressor],\n",
-    "    },\n",
-    "    targets={\n",
-    "        'beh': d.behavioral_data,\n",
-    "    },\n",
-    "    neural_smoothing_tau=.02,\n",
-    "    stream_scaling_factors=None,\n",
-    "    exit_time=50,\n",
-    ")\n",
+    "# run = PredictionRegressionRun.convenience_constructor('zong22', exit_time=150)\n",
+    "# run = PredictionRegressionRun.convenience_constructor('naumann24u', exit_time=500)\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-10-30T18:12:53.607366Z",
-     "start_time": "2024-10-30T18:12:53.322277Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import prr\n",
-    "prr = reload(prr)\n",
-    "prr.ParallelRun.compare_metrics_across_runs([1,2], [run1,run2])"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "4",
    "metadata": {},
    "source": [
     "# Intro Video"
@@ -144,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T20:29:33.785796Z",
@@ -180,13 +122,49 @@
     "            am.grab_frame()\n",
     "    \n",
     "    display.display(display.Video(am.outfile, embed=True))\n",
-    "    plt.close()"
+    "    plt.close()\n",
+    "\n",
+    "\n",
+    "def intro_plot_fish(d, tail_length=5, duration=10, start_time=10, fps=20):\n",
+    "    with AnimationManager(n_cols=2, n_rows=1, figsize=(10, 5), filetype='gif', fps=fps) as am:\n",
+    "        am.axs[0,1].scatter(d.tail_position[:,-1,0], d.tail_position[:,-1,1])\n",
+    "\n",
+    "        for current_t in np.linspace(start_time, start_time + duration, int(duration*fps)):\n",
+    "            am.axs[0,0].cla()\n",
+    "\n",
+    "            n_columns = np.floor(tail_length / np.median(np.diff(d.neural_data.t))).astype(int)\n",
+    "            idx = np.nonzero(~(d.neural_data.t < current_t))[0][0]\n",
+    "\n",
+    "\n",
+    "            am.axs[0,0].imshow(d.neural_data.a[idx-n_columns:idx,0,:200].T, aspect='auto', interpolation='none', extent=[current_t - tail_length, current_t, d.neural_data.a.shape[2], 0],\n",
+    "                               vmin=d.neural_data.a.min(),vmax=d.neural_data.a.max())\n",
+    "            am.axs[0,0].set_xticklabels([])\n",
+    "\n",
+    "\n",
+    "\n",
+    "            old_lims = am.axs[0,1].axis()\n",
+    "            am.axs[0,1].cla()\n",
+    "            am.axs[0,1].axis('off')\n",
+    "\n",
+    "            s = np.nonzero(((current_t - tail_length) < d.behavioral_data.t) & (d.behavioral_data.t < current_t))[0]\n",
+    "\n",
+    "            for i, sample in enumerate(d.behavioral_data.a[s,...]):\n",
+    "                am.axs[0,1].plot(sample[:,0], sample[:,1], color='gray', alpha=(i/s.size)*.5)\n",
+    "                if i == s.size-1:\n",
+    "                    am.axs[0,1].plot(sample[:,0], sample[:,1], color='w', linewidth=3)\n",
+    "                    am.axs[0,1].plot(sample[:,0], sample[:,1], color=f'C{d.pose_class[s[i]]}', alpha=1)\n",
+    "            pf.use_bigger_lims(am.axs[0,1], old_lims)\n",
+    "\n",
+    "            am.grab_frame()\n",
+    "\n",
+    "    display.display(display.Video(am.outfile, embed=True))\n",
+    "    plt.close()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,17 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "datasets.Peyrache15Dataset().neural_data.a.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "11",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,8 +217,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = datasets.Naumann24uDataset(datasets.Naumann24uDataset.sub_datasets[1], beh_type='whole tail')\n",
+    "intro_plot_fish(d, start_time=315, duration=19, fps=50, tail_length=1.1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "12",
    "metadata": {},
    "source": [
     "# Odoherty21 Portion"
@@ -258,15 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
-   "metadata": {},
-   "source": [
-    "## Intro video"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Trajectory with 2d histogram background"
@@ -275,27 +246,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "14",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-22T22:23:04.376908Z",
-     "start_time": "2024-10-22T21:58:45.347209Z"
+     "end_time": "2024-11-05T16:49:46.272192Z",
+     "start_time": "2024-11-05T16:48:10.560469Z"
     }
    },
    "outputs": [],
    "source": [
-    "odoherty_run = prp.PredictionRegressionRun(**prp.PredictionRegressionRun.default_parameter_values['odoherty21'])\n",
+    "odoherty_run = PredictionRegressionRun.convenience_constructor('odoherty21', exit_time=60)\n",
     "run = odoherty_run"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "15",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T17:05:10.647632Z",
-     "start_time": "2024-10-04T17:05:10.535061Z"
+     "end_time": "2024-11-05T16:55:52.344693Z",
+     "start_time": "2024-11-05T16:55:49.009618Z"
     }
    },
    "outputs": [],
@@ -307,18 +278,19 @@
     "tail_length = 1\n",
     "with AnimationManager(fig=fig, make_axs=False, fps=20, filetype='mp4') as am:\n",
     "    for current_t in np.linspace(600, 610, 200):\n",
-    "        plot_history_with_tail(axs[0], run.neural_target, current_t, tail_length, hist_bins=30)\n",
-    "        plot_history_with_tail(axs[1], run.jpca_latents,  current_t, tail_length, hist_bins=30)\n",
-    "        plot_history_with_tail(axs[2], run.beh_target, current_t, tail_length, hist_bins=30)\n",
+    "        # plot_history_with_tail(axs[0], ArrayWithTime.from_NTDS(run.targets['neural']), current_t, tail_length, hist_bins=30)\n",
+    "        plot_history_with_tail(axs[1], run.dim_reduced_data['jpca'],  current_t, tail_length, hist_bins=30)\n",
+    "        # plot_history_with_tail(axs[2], ArrayWithTime.from_NTDS(run.targets['beh']), current_t, tail_length, hist_bins=30)\n",
     "        am.grab_frame()\n",
     "\n",
     "plt.close();\n",
-    "display.display(display.Video(am.outfile, embed=True))"
+    "\n",
+    "am.display_video()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "16",
    "metadata": {},
    "source": [
     "## Data, Latent, Prediction graph"
@@ -327,25 +299,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "17",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-04T16:43:30.921132Z",
-     "start_time": "2024-10-04T16:43:02.270087Z"
+     "end_time": "2024-11-05T18:36:11.078012Z",
+     "start_time": "2024-11-05T18:36:11.036328Z"
     }
    },
    "outputs": [],
    "source": [
     "run = odoherty_run\n",
     "\n",
-    "import adaptive_latents.plotting_functions\n",
-    "pv = reload(adaptive_latents.plotting_functions).PredictionVideo(run.d, fps=20, filetype='mp4')\n",
+    "pv = pf.PredictionVideo(run.d, fps=20, filetype='mp4')\n",
     "\n",
-    "\n",
-    "\n",
-    "assert (run.next_bubble_joint_predictions.t == run.beh_predictions.t).all()\n",
     "with pv.am:\n",
-    "    for current_t in np.linspace(600, 610, 200):\n",
+    "    # for current_t in np.linspace(600, 610, 200):\n",
+    "    for current_t in np.linspace(40, 50, 200):\n",
     "        pv.plot_for_video_t(\n",
     "            current_t, \n",
     "            run.jpca_latents, run.jpca_latents.t, \n",
@@ -358,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "18",
    "metadata": {},
    "source": [
     "## Stream table"
@@ -367,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "19",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:39:48.823513Z",
@@ -378,8 +347,8 @@
    "source": [
     "run_all = odoherty_run\n",
     "if True:\n",
-    "    run_no_neural = prp.PredictionRegressionRun(**(prp.PredictionRegressionRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
-    "    run_no_beh = prp.PredictionRegressionRun(**(prp.PredictionRegressionRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n",
+    "    run_no_neural = prr.PredictionRegressionRun(**(prr.PredictionRegressionRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[0])))\n",
+    "    run_no_beh = prr.PredictionRegressionRun(**(prr.PredictionRegressionRun.default_parameter_values['odoherty21'] | dict(concat_zero_streams=[1])))\n",
     "    def make_row(run):\n",
     "        return ({\n",
     "            'beh_x': run.beh_nrmses[0],\n",
@@ -399,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:40:12.169790Z",
@@ -421,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "21",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:27:36.912178Z",
@@ -509,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:40:00.147935Z",
@@ -623,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "23",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T18:19:08.547680Z",
@@ -637,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "24",
    "metadata": {},
    "source": [
     "# Zong22 Portion"
@@ -646,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "25",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:38.534593Z",
@@ -655,12 +624,12 @@
    },
    "outputs": [],
    "source": [
-    "zong_run = prp.PredictionRegressionRun(**(prp.PredictionRegressionRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n"
+    "zong_run = prr.PredictionRegressionRun(**(prr.PredictionRegressionRun.default_parameter_values['zong22'] | dict(drop_behavior=True, sub_dataset_identifier=0)))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "26",
    "metadata": {},
    "source": [
     "## Dimensionality reduction comparison"
@@ -669,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "27",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:18.245911Z",
@@ -697,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "29",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T19:02:30.461620Z",
@@ -780,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "30",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -789,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T20:48:20.978307Z",
@@ -798,13 +767,13 @@
    },
    "outputs": [],
    "source": [
-    "fish_run = prp.PredictionRegressionRun(**prp.PredictionRegressionRun.default_parameter_values['naumann24u'])"
+    "fish_run = prr.PredictionRegressionRun(**prr.PredictionRegressionRun.default_parameter_values['naumann24u'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
@@ -879,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "33",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
