makes the updating optimization graph an object

--- a/workspace/sfn_results.ipynb
+++ b/workspace/sfn_results.ipynb
@@ -19,9 +19,9 @@
     "from adaptive_latents.plotting_functions import AnimationManager\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
-    "import prediction_regression_pipeline as prp\n",
     "from importlib import reload\n",
     "from IPython import display\n",
+    "import time\n",
     "\n"
    ]
   },
@@ -29,6 +29,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o = adaptive_latents.plotting_functions.UpdatingOptimizationGraph()\n",
+    "for v in o.suggest_values(0,6.28):\n",
+    "    time.sleep(1)\n",
+    "    o.register_result(v, {'beh':{'corr': [np.sin(v), np.cos(v)], 'nrmse': -np.cos(v)}, 'joint':{'corr': [-np.cos(v), -np.cos(v*2)], 'nrmse': np.cos(v)}})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T19:15:17.428068Z",
@@ -43,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2",
+   "id": "3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T19:15:17.439814Z",
@@ -74,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T19:22:20.684062Z",
@@ -90,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T19:09:48.911100Z",
@@ -131,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T19:09:48.952278Z",
@@ -146,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T19:09:49.453574Z",
@@ -206,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "# Other Datasts"
