--- a/workspace/sfn_figures_monkey.ipynb
+++ b/workspace/sfn_figures_monkey.ipynb
@@ -28,7 +28,7 @@
     "from importlib import reload\n",
     "from IPython import display\n",
     "\n",
-    "from prediction_regression_run import PredictionRegressionRun\n",
+    "from prediction_regression_run import pred_reg_run_with_defaults\n",
     "\n"
    ]
   },
@@ -59,25 +59,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-11-05T16:42:45.868057Z",
-     "start_time": "2024-11-05T16:42:13.045717Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# run = PredictionRegressionRun.convenience_constructor('zong22', exit_time=150)\n",
-    "# run = PredictionRegressionRun.convenience_constructor('naumann24u', exit_time=500)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "source": [
     "# Intro Video"
@@ -86,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-22T20:29:33.785796Z",
@@ -164,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "# Odoherty21 Portion"
@@ -237,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "source": [
     "## Trajectory with 2d histogram background"
@@ -246,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-05T16:49:46.272192Z",
@@ -255,14 +238,14 @@
    },
    "outputs": [],
    "source": [
-    "odoherty_run = PredictionRegressionRun.convenience_constructor('odoherty21', exit_time=60)\n",
+    "odoherty_run = pred_reg_run_with_defaults(ds_name='odoherty21', exit_time=60)\n",
     "run = odoherty_run"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-05T16:55:52.344693Z",
@@ -290,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Data, Latent, Prediction graph"
@@ -299,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-05T18:36:11.078012Z",
@@ -327,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "## Stream table"
@@ -336,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:39:48.823513Z",
@@ -368,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:40:12.169790Z",
@@ -390,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:27:36.912178Z",
@@ -478,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T21:40:00.147935Z",
@@ -592,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T18:19:08.547680Z",
@@ -606,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "source": [
     "# Zong22 Portion"
@@ -615,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:38.534593Z",
@@ -629,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "source": [
     "## Dimensionality reduction comparison"
@@ -638,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T17:05:18.245911Z",
@@ -666,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "28",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T19:02:30.461620Z",
@@ -749,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "## Stimulation figure"
@@ -758,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-23T20:48:20.978307Z",
@@ -773,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
@@ -848,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-10-04T16:55:39.633898Z",
