fixes API changes in some output/display files

--- a/notebooks/MWE_fish_phtostim.ipynb
+++ b/notebooks/MWE_fish_phtostim.ipynb
@@ -21,11 +21,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import adaptive_latents.stimulation.photostimulation as ps\n",
     "import adaptive_latents as al\n",
-    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, BWRun\n",
-    "from adaptive_latents.transforms.utils import prosvd_data"
+    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap"
    ]
   },
   {
@@ -34,24 +32,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Specify the paths to the files\n",
-    "stim_file_path = '../workspace/datasets/fish/output_020424_ds1/stimmed.txt'\n",
-    "C_file_path = '../workspace/datasets/fish/output_020424_ds1/analysis_proc_C.txt'\n",
-    "photo_file_path = '../workspace/datasets/fish/output_020424_ds1/photostims.npy'\n",
+    "d = al.datasets.Naumann24uDataset(al.datasets.Naumann24uDataset.sub_datasets[0])\n",
+    "bp = d.dataset_base_path / d.sub_dataset\n",
     "\n",
     "# Load the files\n",
-    "stim = np.loadtxt(stim_file_path) \n",
+    "stim = np.loadtxt(bp / 'stimmed.txt') \n",
     "\"\"\"1st entry: frame number,\n",
     "2nd entry: ignore,\n",
     "3rd entry: angle of motion L,\n",
     "4th entry: angle of motion R,\n",
     "5th entry: timestamp,\"\"\"\n",
-    "C = np.loadtxt(C_file_path)#\n",
+    "C = np.loadtxt(bp / 'analysis_proc_C.txt')#\n",
     "\"\"\"Calcium imaging. \n",
     "1st entry is neuron ID,\n",
     "2nd is time (frame)\"\"\"\n",
-    "photostim = np.load(photo_file_path)\n",
+    "photostim = np.load(bp / 'photostims.npy')\n",
     "\"\"\"1st entry: frame number,\n",
     "2nd entry: counter of stims,\n",
     "3rd entry: neuron ID,\n",
@@ -75,7 +70,11 @@
    "outputs": [],
    "source": [
     "#Perform dimensionality reduction\n",
-    "smallC_photo = prosvd_data(input_arr=C.T,output_d=7, init_size=20, centering=True)"
+    "p = al.Pipeline([\n",
+    "    al.CenteringTransformer(),\n",
+    "    al.proSVD(k=7),\n",
+    "])\n",
+    "smallC_photo = p.offline_run_on(C.T)\n"
    ]
   },
   {
@@ -84,20 +83,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = np.arange(smallC_photo.shape[0])\n",
-    "in_ds = NumpyTimedDataSource(smallC_photo, t, time_offsets=(0,1))\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape,M=100, num=1000, B_thresh=-10, num_grad_q=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#run BW\n",
-    "br = BWRun(bw=bw, in_ds=in_ds)\n",
-    "br.run(bw_step_limit=5500, save_bw_history=False)"
+    "bw = Bubblewrap(M=100, num=1000, B_thresh=-10, num_grad_q=1, log_level=2)\n",
+    "\n",
+    "bw.offline_run_on(smallC_photo)"
    ]
   },
   {
@@ -105,15 +93,6 @@
    "metadata": {},
    "source": [
     "Extract the log predictive probability values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions_list = ps.extract_predictions([br], offset=1)"
    ]
   },
   {
@@ -129,7 +108,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df=ps.rank_neurons(stim, C, photostim, predictions_list)"
+    "predictions = np.array([bw.log['log_pred_p']])\n",
+    "final_df=ps.rank_neurons(stim, C, photostim, predictions)"
    ]
   },
   {
@@ -186,37 +166,11 @@
    "outputs": [],
    "source": [
     "#for neuron 31:\n",
-    "al.plotting_functions.compare_metrics([br], offset=1, red_lines_frames=photostim[:, 0] , xlim=[3300,3500])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In case you want to see how BW is fittinfg the data:\n",
+    "fig, axs = Bubblewrap.compare_runs([bw])\n",
     "\n",
-    "WARNING: it takes a long time to render"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "#proSVD in two dimensions and run BW\n",
-    "\n",
-    "smallC_photo = prosvd_data(C.T,2, 20, centering=True)\n",
-    "t = np.arange(smallC_photo.shape[0])\n",
-    "in_ds = NumpyTimedDataSource(smallC_photo, t, time_offsets=(0,1))\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape, **dict(default_rwd_parameters, M=100, num=1000, B_thresh=-10, num_grad_q=1))\n",
-    "#run BW\n",
-    "br = BWRun(bw=bw, in_ds=in_ds)\n",
-    "br.run(limit=5500, save=False)\n",
-    "\n",
-    "#create animation\n",
-    "ps.bw_animation(smallC_photo, bw.A, bw.mu, bw.L, bw.n_obs, save_path='fishBW_animation3.mp4', fps=10)\"\"\""
+    "for line in photostim[:, 0]:\n",
+    "    for ax in axs[:,0]:\n",
+    "        ax.axvline(line, color='r')\n"
    ]
   }
  ],
