--- a/notebooks/toypred_stim.ipynb
+++ b/notebooks/toypred_stim.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import adaptive_latents as al\n",
-    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager, default_rwd_parameters, BWRun\n",
-    "from adaptive_latents.plotting_functions import show_bubbles_2d, show_nstep_pdf\n",
+    "from adaptive_latents import NumpyTimedDataSource, Bubblewrap, AnimationManager\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "rng = np.random.default_rng()\n",
@@ -141,47 +140,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the generated data with Bubblewrap and AnimationManager\n",
-    "t = np.arange(ys.shape[1])\n",
-    "in_ds = NumpyTimedDataSource(ys[0], t, time_offsets=(0,1))\n",
     "\n",
-    "default_rwd_parameters = {\n",
-    "    # Add necessary parameters here\n",
-    "    # Example: 'param_name': value\n",
-    "}\n",
+    "bw = Bubblewrap(M=100, num=20, B_thresh=-5, num_grad_q=4)\n",
+    "al.Pipeline([bw])\n",
     "\n",
-    "bw = Bubblewrap(dim=in_ds.output_shape, **dict(default_rwd_parameters, M=100, num=20, B_thresh=-5, num_grad_q=4))\n",
+    "sources = [ys[0]]\n",
     "\n",
-    "class CustomAnimation(AnimationManager):\n",
-    "    n_rows = 1\n",
-    "    n_cols = 2\n",
-    "    figsize = (10,4)\n",
-    "    extension = \"mp4\"\n",
-    "    fps = 20\n",
+    "with al.plotting_functions.AnimationManager(n_rows=1, n_cols=2, fps=20) as am:\n",
+    "    for idx, y in enumerate(ys[0]):\n",
+    "        bw.partial_fit_transform([y], stream=0)\n",
+    "        \n",
+    "        if bw.is_initialized:\n",
+    "            for ax in am.axs.flatten():\n",
+    "                ax.cla()\n",
     "\n",
-    "    def custom_draw_frame(self, step, bw: Bubblewrap, br: BWRun):\n",
-    "        historical_observations, _ = br.input_ds.get_history()\n",
+    "            am.axs[0,0].scatter(ys[0][:,0], ys[0][:,1], alpha=0)  # good for setting the x and y lims\n",
+    "            \n",
+    "            bw.show_bubbles_2d(am.axs[0,0])\n",
+    "            am.axs[0,0].scatter(ys[0][:idx,0], ys[0][:idx,1], color='gray', s=5)\n",
+    "            bw.show_nstep_pdf(am.axs[0,1], other_axis=am.axs[0,0], fig=am.fig, show_colorbar=False)\n",
     "\n",
-    "        show_bubbles_2d(self.axs[0,0], historical_observations, bw, show_names=False, tail_length=5)\n",
-    "        show_nstep_pdf(self.axs[0,1], br, self.axs[0,0], self.fig, offset=1, show_colorbar=False)\n",
-    "        #show_nstep_pdf(self.ax[0,2], br, self.ax[0,0], self.fig, hmm=None, method=\"hmm\", offset=1, show_colorbar=False)\n",
-    "        self.axs[0,0].set_title(\"data and bubbles\")\n",
-    "        #self.ax[0,2].set_title(\"1-step true prob.\")\n",
-    "        self.axs[0,1].set_title(\"1-step predicted prob.\")\n",
-    "\n",
-    "        for ax in self.axs[0, :]:\n",
-    "            ax.axis(\"off\")\n",
-    "    \n",
-    "    def frame_draw_condition(self, step_number, bw):\n",
-    "        condition = True\n",
-    "        condition = condition and 0 < step_number < 800\n",
-    "        return condition\n",
-    "\n",
-    "am = CustomAnimation() if True else None\n",
-    "\n",
-    "br = BWRun(bw=bw, in_ds=in_ds, animation_manager=am, show_tqdm=True)\n",
-    "\n",
-    "br.run(limit=1000, save=True)"
+    "            for ax in am.axs.flatten():\n",
+    "                ax.axis(\"off\")\n",
+    "            \n",
+    "            am.grab_frame()\n",
+    "        \n"
    ]
   }
  ],
