--- a/workspace/leventhal_scratch.ipynb
+++ b/workspace/leventhal_scratch.ipynb
@@ -4,12 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:05.599374Z",
-     "start_time": "2024-08-13T18:07:05.590940Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -28,12 +23,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:05.881155Z",
-     "start_time": "2024-08-13T18:07:05.623811Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = Leventhal24uDataset(bin_size=.2)"
@@ -43,12 +33,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:05.885203Z",
-     "start_time": "2024-08-13T18:07:05.881820Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d.trial_data[d.trial_data['correct']==True].tone"
@@ -68,12 +53,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:06.710241Z",
-     "start_time": "2024-08-13T18:07:05.885711Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -97,12 +77,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:06.792283Z",
-     "start_time": "2024-08-13T18:07:06.711293Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -113,12 +88,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:07.734833Z",
-     "start_time": "2024-08-13T18:07:06.792915Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -135,12 +105,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:08.593771Z",
-     "start_time": "2024-08-13T18:07:07.735583Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -156,12 +121,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:16.153080Z",
-     "start_time": "2024-08-13T18:07:08.594340Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "d = Leventhal24uDataset(bin_size=.1)\n",
@@ -178,12 +138,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "9",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:16.585008Z",
-     "start_time": "2024-08-13T18:07:16.153976Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -206,12 +161,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-13T18:07:16.762984Z",
-     "start_time": "2024-08-13T18:07:16.588722Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -235,7 +185,6 @@
     "    CenteringTransformer(),\n",
     "    proSVD(k=6, init_size=50, whiten=False, log_level=0),\n",
     "    KernelSmoother(tau=1),\n",
-    "    mmICA()\n",
     "])\n",
     "\n",
     "start = 1238\n",
@@ -250,7 +199,7 @@
     "        output.append(output_row)\n",
     "        o = np.squeeze(output)\n",
     "\n",
-    "        next_t = d.neural_data.current_sample_time()\n",
+    "        next_t = p.mid_run_sources[0][0].current_sample_time()\n",
     "        if len(o.shape) == 2 and start < next_t < start + video_time:\n",
     "            am.axs[0,0].cla()\n",
     "            am.axs[0,0].autoscale(True)\n",
@@ -260,8 +209,7 @@
     "            am.axs[0,0].set_title(f'{i}')\n",
     "            am.axs[0,0].axis('equal')\n",
     "\n",
-    "            # if np.abs(next_t - (d.trial_data['Time'] + d.trial_data['preTone'])).min() < .5:\n",
-    "            if np.abs(next_t - (d.trial_data['Time'])).min() < .5:\n",
+    "            if np.abs(next_t - (d.trial_data['centerIn'])).min() < .5:\n",
     "                x = (am.axs[0,0].transAxes + am.axs[0,0].transData.inverted()).transform((.98,.98))\n",
     "                am.axs[0,0].autoscale(False)\n",
     "                am.axs[0,0].scatter(*x, color='green', s=100)\n",
@@ -291,13 +239,13 @@
     "        KernelSmoother(tau=8),\n",
     "        mmICA()\n",
     "    ]),\n",
-    "    # Pipeline([\n",
-    "    #     KernelSmoother(tau=8),\n",
-    "    #     CenteringTransformer(),\n",
-    "    #     proSVD(k=6, whiten=True),\n",
-    "    #     KernelSmoother(tau=8),\n",
-    "    #     mmICA()\n",
-    "    # ]),\n",
+    "    Pipeline([\n",
+    "        KernelSmoother(tau=1),\n",
+    "        CenteringTransformer(),\n",
+    "        proSVD(k=6),\n",
+    "        KernelSmoother(tau=8),\n",
+    "        mmICA()\n",
+    "    ]),\n",
     "]\n",
     "\n",
     "start = 1238 # in s\n",
@@ -320,25 +268,24 @@
     "        next_t = next_ts[0]\n",
     "        o = os[0]\n",
     "        if len(o.shape) == 2 and start < next_t < start + video_time:\n",
-    "            am.ax[0,0].cla()\n",
-    "            am.ax[0,0].autoscale(True)\n",
+    "            am.axs[0,0].cla()\n",
+    "            am.axs[0,0].autoscale(True)\n",
     "            \n",
     "            for j, o in enumerate(os):\n",
-    "                am.ax[0,0].scatter(o[:,0], o[:,1], alpha=.999**np.arange(o.shape[0])[::-1], color=f'C{j}', linewidth=0, s=5)\n",
-    "                am.ax[0,0].plot(o[-10:,0], o[-10:,1], color=f'C{j}')\n",
-    "            am.ax[0,0].set_title(f'frame={i}, time={next_t:.1f}')\n",
-    "            am.ax[0,0].axis('equal')\n",
+    "                am.axs[0,0].scatter(o[:,0], o[:,1], alpha=.999**np.arange(o.shape[0])[::-1], color=f'C{j}', linewidth=0, s=5)\n",
+    "                am.axs[0,0].plot(o[-10:,0], o[-10:,1], color=f'C{j}')\n",
+    "            am.axs[0,0].set_title(f'frame={i}, time={next_t:.1f}')\n",
+    "            am.axs[0,0].axis('equal')\n",
     "\n",
-    "            # if np.abs(next_t - (d.trial_data['Time'] + d.trial_data['preTone'])).min() < .5:\n",
-    "            if np.abs(next_t - (d.trial_data['Time'])).min() < .5:\n",
+    "            if np.abs(next_t - (d.trial_data['centerIn'])).min() < .5:\n",
     "                dot_point = np.array([.98,.98])\n",
     "                # dot_point = (am.ax[0,0].transAxes + am.ax[0,0].transData.inverted()).transform(dot_point)\n",
     "                # am.ax[0,0].autoscale(False)\n",
     "                dot_point = dot_point * 10\n",
-    "                am.ax[0,0].scatter(*dot_point, color='green', s=100)\n",
+    "                am.axs[0,0].scatter(*dot_point, color='green', s=100)\n",
     "\n",
-    "            am.ax[0,0].set_xlim([-10, 10])\n",
-    "            am.ax[0,0].set_ylim([-10, 10])\n",
+    "            am.axs[0,0].set_xlim([-10, 10])\n",
+    "            am.axs[0,0].set_ylim([-10, 10])\n",
     "            am.grab_frame()\n",
     "        elif next_t > start + video_time:\n",
     "            break\n",
