--- a/workspace/convergence_plots.ipynb
+++ b/workspace/convergence_plots.ipynb
@@ -12,13 +12,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-15T13:22:52.067570Z",
-     "start_time": "2024-08-15T13:22:52.059682Z"
-    },
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import adaptive_latents as al\n",
@@ -26,7 +20,6 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from picard import permute\n",
-    "import sklearn\n",
     "import sklearn.cross_decomposition\n",
     "import matlab.engine\n",
     "import scipy.stats as stats\n",
@@ -47,12 +40,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-15T13:20:30.031005Z",
-     "start_time": "2024-08-15T13:20:30.022477Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.rc('lines', linewidth=2)\n",
@@ -72,12 +60,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-15T13:20:31.535769Z",
-     "start_time": "2024-08-15T13:20:31.518609Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def plot(offline_errors, trajectories, t, i, name, offline_error_t=None):\n",
@@ -115,7 +98,7 @@
     "    ax.set_xticks(common_xticks)\n",
     "\n",
     "    ax.set_title(f\"{name} error\")\n",
-    "    fig.savefig(f\"{al.CONFIG['plot_save_path']}/{name}.svg\")\n",
+    "    fig.savefig(al.CONFIG.plot_save_path/ f\"{name}.svg\")\n",
     "\n",
     "    return fig, ax"
    ]
@@ -132,12 +115,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-14T19:44:04.038604Z",
-     "start_time": "2024-08-14T19:43:56.538731Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "eng = matlab.engine.start_matlab()\n",
@@ -160,7 +138,7 @@
     "    offline_errors.append(offline_error)\n",
     "\n",
     "    # my section\n",
-    "    jp = sjPCA(log_level=1)\n",
+    "    jp = sjPCA(log_level=2)\n",
     "    jp.offline_run_on(NumpyTimedDataSource(X, timepoints = np.arange(X.shape[0]) * dt))\n",
     "    distances, t = jp.get_distance_from_subspace_over_time(true_variables['C'])\n",
     "    trajectories.append(distances[:,0])\n",
@@ -180,12 +158,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-14T19:44:06.214874Z",
-     "start_time": "2024-08-14T19:44:04.039307Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "trajectories = []\n",
@@ -195,7 +168,7 @@
     "    m = int((T/dt)//n) # number of blocks\n",
     "    X = rng.laplace(size=(m, n, n))\n",
     "\n",
-    "    ica = mmICA(alpha=.5, maxiter_cg=20, tol=1e-20, log_level=1)\n",
+    "    ica = mmICA(alpha=.5, maxiter_cg=20, tol=1e-20, log_level=2)\n",
     "    input_data = NumpyTimedDataSource(X, timepoints = np.arange(m) * n * dt )\n",
     "    ica.offline_run_on(input_data)\n",
     "    ts = []\n",
@@ -230,19 +203,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "10",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-15T13:20:42.690543Z",
-     "start_time": "2024-08-15T13:20:40.604791Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "trajectories = []\n",
     "offline_errors = []\n",
     "for _ in range(10):\n",
     "    X, _, true_variables = al.jpca.generate_circle_embedded_in_high_d(rng, m=int(T/dt), n=8, stddev=1)\n",
-    "    pro = proSVD(k=4, log_level=1)\n",
+    "    pro = proSVD(k=4, log_level=2)\n",
     "    X_with_time = NumpyTimedDataSource(X, timepoints=np.arange(X.shape[0]) * dt)\n",
     "    pro.offline_run_on(X_with_time)\n",
     "    Q_error, t = pro.get_distance_from_subspace_over_time(true_variables['C'])\n",
@@ -279,12 +247,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "12",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-15T13:34:35.749114Z",
-     "start_time": "2024-08-15T13:34:34.661345Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "trajectories = []\n",
@@ -313,7 +276,7 @@
     "    Y_with_time = NumpyTimedDataSource(Y, timepoints=np.arange(Y.shape[0]) * dt)\n",
     "\n",
     "\n",
-    "    pls = proPLS(k=3, log_level=1)\n",
+    "    pls = proPLS(k=3, log_level=2)\n",
     "    output = pls.offline_run_on([X_with_time, Y_with_time])\n",
     "    U_error, t = pls.get_distance_from_subspace_over_time(x_common_basis, variable='X')\n",
     "    trajectories.append(U_error)\n",
