removes many outdated notebooks/output-type files

--- a/workspace/pato_stim/MWE_fish_phtostim.ipynb
+++ b/workspace/pato_stim/MWE_fish_phtostim.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import adaptive_latents.stimulation.photostimulation as ps\n",
+    "import photostimulation as ps\n",
     "import adaptive_latents as al\n",
     "from adaptive_latents import NumpyTimedDataSource, Bubblewrap"
    ]
